Refactored new user creation process.  Now users register without choosing a URL.  They are, however, funnelled into the URL selection screen whenever logged in until they pick one.  Subsequently, a right menu option called 'Change URL' allows this to be changed whenever.  Added an unstyled notFound template for non-existant pages.

--- a/tiles.html
+++ b/tiles.html
@@ -55,3 +55,7 @@
    </div>
   </div>
 </template>
+
+<template name="notFound">
+  I don't know what you think you're trying to do here, wise guy, but it ain't working.
+</template>
