Added sergeyt's typeahead package, created data helper (returns unique array of already existing categories) and custom suggestion template (doesn't seem to work).

--- a/tiles.html
+++ b/tiles.html
@@ -25,7 +25,9 @@
 </template>
 
 <template name="allTiles">
-  <div id="tile-container" class="flex-column"></div>
+  <div id="tile-scroller">
+    <div id="tile-container" class="flex-column"></div>
+  </div>
 </template>
 
 <template name="categories">
