Data is now transmitted from the server to the client using two session vars: one, a dictionary taking the form {tile_id: tile}, and the other, [{cat1}, {cat2}, ...].  This allows for reactive tileViewModals on clients, receiving changes to Tile data or Tile, Category order on-the-fly, with no need for a refresh (DDP).  Minor refactors to client HTML.

--- a/client/tiles.html
+++ b/client/tiles.html
@@ -41,8 +41,12 @@
   <div class="category-title valign-wrapper" style="color: {{color}};">
     <div class="category-title-text">{{title}}</div>
   </div>
-  {{#each tiles}}
-    {{> tile color=../color tile=this}}
+  {{#each tile_ids}}
+    {{#with getTile this}}
+      {{#if this}}
+        {{> tile color=../../color tile=this}}
+      {{/if}}
+    {{/with}}
   {{/each}}
 </template>
 
