--- a/client/tiles.html
+++ b/client/tiles.html
@@ -30,6 +30,13 @@
   </div>
 </template>
 
+<template name="noResults">
+  <div id="no-results" class="center valign-wrapper">
+    Sorry, no results found for <span>{{searchQuery}}</span>
+    <div id="tile-container-inner"></div>
+  </div>
+</template>
+
 <template name="categories">
   {{#each categories}}
     {{> category}}
