Search input icon now changes to an X which will clear the field when clicked, only if it contains text.  Search query is automatically reset when the page is refreshed.

--- a/client/tiles.html
+++ b/client/tiles.html
@@ -31,7 +31,7 @@
 </template>
 
 <template name="noResults">
-  <div id="no-results" class="center valign-wrapper">
+  <div id="no-results" class="center">
     Sorry, no results found for <span>{{searchQuery}}</span>
     <div id="tile-container-inner"></div>
   </div>
