Created separate modals region inside master layout, 'appLayout'.  tileViewModal is rendered here when a visitor hits the Render User route.

--- a/client/tiles.html
+++ b/client/tiles.html
@@ -7,12 +7,12 @@
 <template name="appLayout">
   {{> rightMenu}}
   {{#if verify currentUser}}
-    {{> tileEditModal }}
     {{> deleteTileConfirmation }}
   {{else}}
     {{> login }}
   {{/if}}
-  {{> tileViewModal }}
+  <!--{{> tileViewModal }} -->
+  {{> yield region="modals"}}
   <div id="pusher-container" class="pusher">
     {{> navbar }}
     {{> yield }}
