Renamed `tile` template to `tileSmall`.

--- a/client/tiles.html
+++ b/client/tiles.html
@@ -51,7 +51,7 @@
   {{#each tile_ids}}
     {{#with getTile this}}
       {{#if this}}
-        {{> tile color=../../color tile=this}}
+        {{> tileSmall color=../../color tile=this}}
       {{/if}}
     {{/with}}
   {{/each}}
