Created specific region to yield to rightMenu templates to, called `rightMenu`.

--- a/client/tiles.html
+++ b/client/tiles.html
@@ -5,7 +5,7 @@
 <body></body>
 
 <template name="appLayout">
-  {{> rightMenu}}
+  {{> yield region="rightMenu"}}
   {{#if verify currentUser}}
     {{> deleteTileConfirmation }}
   {{else}}
