Many small style upgrades.  Navbar has been abstracted to a helper template.  Created individual navbars for tileEdit and allTiles routes.

--- a/client/tiles.html
+++ b/client/tiles.html
@@ -13,7 +13,7 @@
   {{/if}}
   {{> yield region="modals"}}
   <div id="pusher-container" class="pusher">
-    {{> navbar }}
+    {{> yield region="navbar" }}
     {{> yield }}
     {{#if verify currentUser}}
       <div class="progress">
