loginRequired before-render hook now directs users to a login screen with an informative bit of toast. (instead of the modal).  Login modal has been refactored into a separate template.

--- a/client/tiles.html
+++ b/client/tiles.html
@@ -9,7 +9,7 @@
   {{#if verify currentUser}}
     {{> deleteTileConfirmation }}
   {{else}}
-    {{> login }}
+    {{> loginModal }}
   {{/if}}
   {{> yield region="modals"}}
   <div id="pusher-container" class="pusher">
