--- a/client/tiles.html
+++ b/client/tiles.html
@@ -22,3 +22,10 @@
     {{/if}}
   </div>
 </template>
+
+<template name="home">
+  <div class="centered-container">
+    <p>Welcome to TilesJS!  Sign in or whatever.  <a href="/register">Don't have an account?</a></p>
+    {{> loginScreen }}
+  </div>
+</template>
