--- a/client/tiles.html
+++ b/client/tiles.html
@@ -24,8 +24,10 @@
 </template>
 
 <template name="home">
-  <div class="centered-container">
-    <p>Welcome to TilesJS!  Sign in or whatever.  <a href="/register">Don't have an account?</a></p>
+  <div id="home-container" class="centered-container">
+    <p>
+      Welcome to TilesJS!  Sign in or whatever.  <a href="/register">Don't have an account?</a>
+    </p>
     {{> loginScreen }}
   </div>
 </template>
